Make visible node types configurable, fixes #16.

--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -57,3 +57,9 @@ th.numeric {
 .page-column-full {
     width: 100%;
 }
+
+.bp4-navbar-heading a,
+.bp4-navbar-heading a:hover {
+    color: white;
+    text-decoration: none;
+}
